--- a/package.json
+++ b/package.json
@@ -6,14 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aynjel/tabulation-node-js.git"
-  },
   "author": "Anggi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aynjel/tabulation-node-js/issues"
-  },
-  "homepage": "https://github.com/aynjel/tabulation-node-js#readme"
+  "license": "ISC"
 }
